style change in admin

--- a/src/output.css
+++ b/src/output.css
@@ -663,6 +663,10 @@ video {
   inset: -0.25rem;
 }
 
+.\!top-0 {
+  top: 0px !important;
+}
+
 .\!top-\[98\%\] {
   top: 98% !important;
 }
@@ -687,10 +691,6 @@ video {
   right: 5%;
 }
 
-.top-0 {
-  top: 0px;
-}
-
 .top-\[-100\%\] {
   top: -100%;
 }
@@ -699,8 +699,8 @@ video {
   top: 140%;
 }
 
-.\!top-0 {
-  top: 0px !important;
+.top-\[0\%\] {
+  top: 0%;
 }
 
 .isolate {
@@ -870,6 +870,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.\!flex {
+  display: flex !important;
 }
 
 .inline-flex {
